<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.nfctattoos.diana.tattyparse.ScanTattooActivity"
    tools:showIn="@layout/activity_scan_tattoo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/nfc_screen_id_text"
                android:text="@string/id_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/username_text"
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nfc_screen_id_text"
                android:layout_marginTop="20dp"
                android:textSize="20dp"/>

            <TextView
                android:id="@+id/tattoo_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tattoo_name"
                android:layout_below="@id/username_text"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/tattoo_name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_text"
                android:layout_alignLeft="@id/tattoo_name_text"
                android:layout_alignBaseline="@id/tattoo_name_text"
                android:layout_marginLeft="130dp"
                android:background="@color/light_gray"/>

            <TextView
                android:id="@+id/tattoo_message_text"
                android:text="@string/tattoo_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tattoo_name_text"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/tattoo_message_edit"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_below="@id/tattoo_message_text"
                android:background="@color/light_gray"/>

            <!-- <ImageButton
                android:id="@+id/tattoo_image"
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@mipmap/ic_launcher"
                android:onClick="chooseNewImage"
                android:layout_below="@id/tattoo_message_edit"/> -->

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tattoo_message_edit"
                android:layout_marginTop="70dp"
                android:layout_centerHorizontal="true"
                android:text="Save Changes"
                android:onClick="saveTattoo"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
